src/test/deca/context/valid/oracle/method_lot_params.deca
class A {
    int m(int a, int b, int c, int d, int e, int aa, int bb, int cc, int dd, int ee, int q, int s, int w, int x, int v){
        return 0;
    }
}