src/test/deca/context/invalid/with-object/binary_op_plus_with_two_att.deca
class A{
    int x = 0, y = 1;
}
{
    println(x + y);
}